--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -26,6 +26,12 @@
   &.close {
     .ant-modal-mask {
       background-color: unset !important;
+      // -webkit-transition: background-color 0.3s ease-in;
+      // /* Safari */
+      // transition: background-color 0s linear;
+      // -webkit-transition-delay: 0.3s;
+      // /* Safari */
+      // transition-delay: 0.2s;
     }
   }
 }
