--- a/src/styles/client.module.scss
+++ b/src/styles/client.module.scss
@@ -3,6 +3,7 @@
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+  font-family: "Lexend", sans-serif;
 }
 
 @media (min-width: 768px) {
@@ -223,8 +224,9 @@
   }
 
   .title {
-    font-size: 27px;
-    font-family: 'Roboto', sans-serif;
+    font-size: 28px;
+    font-weight: bold;
+    font-family: "Lexend", sans-serif;
     color: #353535;
     line-height: 35px;
     margin-top: 20px;
