update locale and minwidth menu

--- a/src/styles/client.module.scss
+++ b/src/styles/client.module.scss
@@ -3,7 +3,7 @@
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
-  font-family: "Lexend", sans-serif;
+  font-family: 'Lexend', sans-serif;
 }
 
 @media (min-width: 768px) {
@@ -226,7 +226,7 @@
   .title {
     font-size: 28px;
     font-weight: bold;
-    font-family: "Lexend", sans-serif;
+    font-family: 'Lexend', sans-serif;
     color: #353535;
     line-height: 35px;
     margin-top: 20px;
